syntax = "proto3";

package agent;

option go_package = "github.com/narvanalabs/control-plane/api/proto";

// AgentService defines the gRPC interface for communication between
// the control plane and node agents.
service AgentService {
  // Deploy instructs the agent to deploy an artifact on the node.
  rpc Deploy(DeployRequest) returns (DeployResponse);
  
  // Stop instructs the agent to stop a running deployment.
  rpc Stop(StopRequest) returns (StopResponse);
  
  // GetStatus retrieves the current status of a deployment.
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  
  // StreamLogs streams logs from a deployment in real-time.
  rpc StreamLogs(StreamLogsRequest) returns (stream LogEntry);
}

// DeployRequest contains all information needed to deploy an artifact.
message DeployRequest {
  string deployment_id = 1;
  string artifact = 2;
  string build_type = 3; // "oci" or "pure-nix"
  RuntimeConfig config = 4;
  map<string, string> secrets = 5;
}

// RuntimeConfig holds runtime configuration for a deployment.
message RuntimeConfig {
  string resource_tier = 1;
  map<string, string> env_vars = 2;
  repeated PortMapping ports = 3;
  HealthCheckConfig health_check = 4;
}

// PortMapping defines a port mapping for a service.
message PortMapping {
  int32 container_port = 1;
  string protocol = 2; // tcp or udp, defaults to tcp
}

// HealthCheckConfig defines health check settings for a service.
message HealthCheckConfig {
  string path = 1;
  int32 port = 2;
  int32 interval_seconds = 3;
  int32 timeout_seconds = 4;
  int32 retries = 5;
}

// DeployResponse is returned after a deploy request is processed.
message DeployResponse {
  bool success = 1;
  string message = 2;
}

// StopRequest contains the deployment to stop.
message StopRequest {
  string deployment_id = 1;
}

// StopResponse is returned after a stop request is processed.
message StopResponse {
  bool success = 1;
  string message = 2;
}

// GetStatusRequest contains the deployment to query.
message GetStatusRequest {
  string deployment_id = 1;
}

// GetStatusResponse contains the current deployment status.
message GetStatusResponse {
  string deployment_id = 1;
  string status = 2; // pending, starting, running, stopping, stopped, failed
  string message = 3;
  int64 started_at = 4; // Unix timestamp, 0 if not started
  int64 updated_at = 5; // Unix timestamp
}

// StreamLogsRequest specifies which deployment's logs to stream.
message StreamLogsRequest {
  string deployment_id = 1;
  bool follow = 2; // If true, continue streaming new logs
  int32 tail_lines = 3; // Number of recent lines to return initially (0 = all)
}

// LogEntry represents a single log line.
message LogEntry {
  string deployment_id = 1;
  string source = 2; // "build" or "runtime"
  string level = 3; // "info", "warn", "error"
  string message = 4;
  int64 timestamp = 5; // Unix timestamp in nanoseconds
}
